# def_result

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  coverage.md  package.json  pyproject.toml  requirements.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yaml  codeql.yml  coverage.yaml  publish-test.yaml  release.yaml
def_result/: Result.py  ResultDetail.py  __init__.py  decorator.py
def_result/ResultDetails/: ErrorDetail.py  SuccessDetail.py  __init__.py
def_result/ResultDetails/Errors/: BadRequestError.py  ConflictError.py  ExceptionError.py  ForbiddenError.py  InternalError.py  NotFoundError.py  UnauthorizedError.py  ValidationError.py  __init__.py
def_result/ResultDetails/Success/: CreatedDetail.py  NotModifiedDetail.py  PartialContentDetail.py  __init__.py
docs/: CONTRIBUTING.md
tests/: helpers.py  test_Result.py  test_ResultDetail.py  test_decorator.py  test_main.py
tests/ResultDetails/: test_ErrorDetail.py  test_SuccessDetail.py
tests/ResultDetails/Errors/: test_BadRequestError.py  test_ConflictError.py  test_ExceptionError.py  test_ForbiddenError.py  test_InternalError.py  test_NotFoundError.py  test_UnauthorizedError.py  test_ValidationError.py
tests/ResultDetails/Success/: test_CreatedDetail.py  test_NotModifiedDetail.py  test_PartialContentDetail.py
