# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "def_result"
version = "1.0.1"
description = "A functional error handling library for working with the results of a function to improve managing errors."
authors = ["Payadel <payadelteam@gmail.com>"]
readme = "README.md"
license = "GPLV3"
repository = "https://github.com/Payadel/def_result"
keywords = ["functional programming", "error handling", "def", "function"]
packages = [{ include = "def_result" }]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
pytest = "^7.2.2"
pylint = "^2.17.0"
isort = "^5.12.0"
coverage = "^7.2.2"
tox = "^4.4.7"
tox-gh-actions = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
